src/grammars/snapshots/giallo__grammars__injections__tests__injection_0.snap
---
source: src/grammars/injections.rs
description: "L:text.html.markdown"
expression: result
---
[
    CompiledInjectionMatcher {
        matcher: Scope(
            Scope("text.html.markdown"),
        ),
        priority: Some(
            Left,
        ),
    },
]
