src/grammars/snapshots/giallo__grammars__injections__tests__injection_1.snap
---
source: src/grammars/injections.rs
description: "L:text.html -comment"
expression: result
---
[
    CompiledInjectionMatcher("L:text.html -comment"),
]
