src/grammars/snapshots/giallo__grammars__injections__tests__injection_10.snap
---
source: src/grammars/injections.rs
description: "text.html.php.blade - (meta.embedded | meta.tag | comment.block.blade), L:(text.html.php.blade meta.tag - (comment.block.blade | meta.embedded.block.blade)), L:(source.js.embedded.html - (comment.block.blade | meta.embedded.block.blade))"
expression: result
---
[
    CompiledInjectionMatcher("text.html.php.blade -(meta.embedded | meta.tag | comment.block.blade)"),
    CompiledInjectionMatcher("L:text.html.php.blade meta.tag -(comment.block.blade | meta.embedded.block.blade)"),
    CompiledInjectionMatcher("L:source.js.embedded.html -(comment.block.blade | meta.embedded.block.blade)"),
]
