src/grammars/snapshots/giallo__grammars__injections__tests__injection_12.snap
---
source: src/grammars/injections.rs
description: "L:source.css -comment, L:source.postcss -comment, L:source.sass -comment, L:source.stylus -comment"
expression: result
---
[
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("source.css"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("source.postcss"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("source.sass"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("source.stylus"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
]
