src/grammars/snapshots/giallo__grammars__injections__tests__injection_13.snap
---
source: src/grammars/injections.rs
description: "L:source.js -comment -string, L:source.js -comment -string, L:source.jsx -comment -string,  L:source.js.jsx -comment -string, L:source.ts -comment -string, L:source.tsx -comment -string, L:source.rescript -comment -string, L:source.vue -comment -string, L:source.svelte -comment -string, L:source.php -comment -string, L:source.rescript -comment -string"
expression: result
---
[
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("source.js"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
                Not(
                    Scope(
                        Scope("string"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("source.js"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
                Not(
                    Scope(
                        Scope("string"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("source.jsx"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
                Not(
                    Scope(
                        Scope("string"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("source.js.jsx"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
                Not(
                    Scope(
                        Scope("string"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("source.ts"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
                Not(
                    Scope(
                        Scope("string"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("source.tsx"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
                Not(
                    Scope(
                        Scope("string"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("source.rescript"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
                Not(
                    Scope(
                        Scope("string"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("source.vue"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
                Not(
                    Scope(
                        Scope("string"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("source.svelte"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
                Not(
                    Scope(
                        Scope("string"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("source.php"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
                Not(
                    Scope(
                        Scope("string"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("source.rescript"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
                Not(
                    Scope(
                        Scope("string"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
]
