src/grammars/snapshots/giallo__grammars__injections__tests__injection_2.snap
---
source: src/grammars/injections.rs
description: text.html
expression: result
---
[
    CompiledInjectionMatcher {
        matcher: Scope(
            Scope("text.html"),
        ),
        priority: None,
    },
]
