src/grammars/snapshots/giallo__grammars__injections__tests__injection_3.snap
---
source: src/grammars/injections.rs
description: "L:meta.decorator.ts -comment -text.html"
expression: result
---
[
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("meta.decorator.ts"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
                Not(
                    Scope(
                        Scope("text.html"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
]
