src/grammars/snapshots/giallo__grammars__injections__tests__injection_4.snap
---
source: src/grammars/injections.rs
description: "L:text.pug -comment -string.comment, L:text.html.derivative -comment.block"
expression: result
---
[
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("text.pug"),
                ),
                Not(
                    Scope(
                        Scope("comment"),
                    ),
                ),
                Not(
                    Scope(
                        Scope("string.comment"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("text.html.derivative"),
                ),
                Not(
                    Scope(
                        Scope("comment.block"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
]
