src/grammars/snapshots/giallo__grammars__injections__tests__injection_5.snap
---
source: src/grammars/injections.rs
description: "L:meta.tag -meta.attribute -meta.ng-binding -entity.name.tag.pug"
expression: result
---
[
    CompiledInjectionMatcher {
        matcher: And(
            [
                Scope(
                    Scope("meta.tag"),
                ),
                Not(
                    Scope(
                        Scope("meta.attribute"),
                    ),
                ),
                Not(
                    Scope(
                        Scope("meta.ng-binding"),
                    ),
                ),
                Not(
                    Scope(
                        Scope("entity.name.tag.pug"),
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
]
