src/grammars/snapshots/giallo__grammars__injections__tests__injection_6.snap
---
source: src/grammars/injections.rs
description: "L:(meta.script.svelte | meta.style.svelte) (meta.lang.js | meta.lang.javascript) - (meta source)"
expression: result
---
[
    CompiledInjectionMatcher {
        matcher: And(
            [
                Or(
                    [
                        Scope(
                            Scope("meta.script.svelte"),
                        ),
                        Scope(
                            Scope("meta.style.svelte"),
                        ),
                    ],
                ),
                Or(
                    [
                        Scope(
                            Scope("meta.lang.js"),
                        ),
                        Scope(
                            Scope("meta.lang.javascript"),
                        ),
                    ],
                ),
                Not(
                    And(
                        [
                            Scope(
                                Scope("meta"),
                            ),
                            Scope(
                                Scope("source"),
                            ),
                        ],
                    ),
                ),
            ],
        ),
        priority: Some(
            Left,
        ),
    },
]
