src/grammars/snapshots/giallo__grammars__injections__tests__injection_7.snap
---
source: src/grammars/injections.rs
description: "L:(source.ts, source.js, source.coffee)"
expression: result
---
[
    CompiledInjectionMatcher("L:(source.ts | source.js | source.coffee)"),
]
